<resources>
    <string name="app_name">Mortgage Calculator Ramirez</string>
    <string name="label_amount">Amount</string>
    <string name="amount">100000.00</string>
    <string name="label_years">Years</string>
    <string name="years">30</string>
    <string name="label_rate">Interest Rate</string>
    <string name="rate">3.5%</string>
    <string name="label_monthly_payment">Monthly Payment</string>
    <string name="monthly_payment">$449.04</string>
    <string name="label_total_payment">Total Payment</string>
    <string name="total_payment">$161654.66</string>
    <string name="modify_data">Modify Data</string>
</resources>
